added styled header

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
     <title>MyBookList App</title>
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <div class="container mt-4">
+      <h1 class="display-4 text-center">
+        <i class="fas fa-book-open text-primary"></i>
+        My<span class="text-primary">Book</span>List
+      </h1>
+    </div>
   </body>
 </html>
