--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,21 @@
         <i class="fas fa-book-open text-primary"></i>
         My<span class="text-primary">Book</span>List
       </h1>
+      <form id="book-form">
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input type="text" id="title" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="author">Author</label>
+          <input type="text" id="author" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="isbn">ISBN#</label>
+          <input type="text" id="isbn" class="form-control">
+        </div>
+        <input type="submit" value="Add Book" class="btn btn-primary btn-block">
+      </form>
     </div>
   </body>
 </html>
