--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         </div>
         <input type="submit" value="Add Book" class="btn btn-primary btn-block">
       </form>
-      <table class="table table-striped">
+      <table class="table table-striped mt-5">
         <thead>
           <tr>
             <th>Title</th>
